@@ -4,5 +4,5 @@ parts = test
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.component [test, back35]
+eggs = zope.app.component [test]
 
