@@ -58,11 +58,9 @@ setup(name='zope.app.component',
           test=['zope.app.testing',
                 'zope.app.securitypolicy',
                 'zope.app.zcmlfiles',
-                'zope.modulealias',
                 'zope.app.schema',
                 'zope.testbrowser',
-                ],
-          back35=['zope.app.layers']),
+                ]),
       install_requires=[
           'setuptools',
           'zope.annotation',
